--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ dependencies = [
 dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
-    "black>=23.0",
+    "black==23.12.1",
     "ruff>=0.1.0",
     "types-PyYAML>=6.0",
     "mypy>=1.0",
